--- a/themes/metrumy/sass/_variables.scss
+++ b/themes/metrumy/sass/_variables.scss
@@ -15,15 +15,15 @@ $green-light:         #33dd55;
 $blue:                #2233dd;
 $blue-dark:             darken($blue, 10%);
 $blue-light:          #44aaee;
-$blue-skye:           #cdd;
 $aquamarine:          #77ddff;
 $purple:              #5500aa;
 $purple-light:        #9966ee;
 $grey:                #888;
 $grey-light:            lighten($grey, 40%);
 $grey-dark:             darken($grey, 10%);
+$grey-skye:           #a9baba;
 
-$graphite:            #353535;
+$graphite:            #282525;
 $yellow:              #ffee66;
 $yellow-light:        #ffeedd;
 $background-yellow:   #ffee99;
