change color palette

--- a/themes/metrumy/sass/_base.scss
+++ b/themes/metrumy/sass/_base.scss
@@ -17,7 +17,7 @@ html {
 }
 
 body {
-  background-color: $graphite;
+  background-color: $night;
   color: $grey-skye;
   margin: 0;
   padding: 0;
