--- a/themes/metrumy/sass/_variables.scss
+++ b/themes/metrumy/sass/_variables.scss
@@ -28,10 +28,10 @@ $yellow:              #ffee66;
 $yellow-light:        #ffeedd;
 $background-yellow:   #ffee99;
 $orange:              #ff6622;
-$orange-light:        #eecc66;
+$orange-light:        #ccbb66;
 $orange-deep:         #dd4433;
 $night:               #222233;
-$sand:                #eee6dd;
+$sand:                #ccaa99;
 
 // sceen sizes
 $screen-big:            1024px;
