fix sw.js and links issues fetch after window load, fix link typos

--- a/themes/metrumy/layouts/_default/landing.html
+++ b/themes/metrumy/layouts/_default/landing.html
@@ -11,7 +11,7 @@
   </div>
 
   <div class="topbar--unit">
-      <a class="topbar--link topbar--link-current" href="{{ .Site.BaseURL }}/howiwork">
+      <a class="topbar--link topbar--link-current" href="{{ .Site.BaseURL }}/howiwork/">
           How I Work / About + Contact
       </a>
   </div>
