--- a/themes/metrumy/layouts/index.html
+++ b/themes/metrumy/layouts/index.html
@@ -9,7 +9,7 @@
     </div>
 
     <div class="topbar--unit">
-        <a class="topbar--link" href="{{ .Site.BaseURL }}/howiwork">
+        <a class="topbar--link" href="{{ .Site.BaseURL }}/howiwork/">
             How I Work / About + Contact
         </a>
     </div>
