--- a/themes/metrumy/layouts/partials/topbar.html
+++ b/themes/metrumy/layouts/partials/topbar.html
@@ -7,7 +7,7 @@
   </div>
 
   <div class="topbar--unit">
-    <a class="topbar--link" href="{{ .Site.BaseURL }}/howiwork">
+    <a class="topbar--link" href="{{ .Site.BaseURL }}/howiwork/">
       How I Work / About + Contact
     </a>
   </div>
