ui redesign –  visual style aspects

--- a/themes/metrumy/layouts/partials/postList.html
+++ b/themes/metrumy/layouts/partials/postList.html
@@ -37,7 +37,13 @@
 
         {{ if .Truncated }}
         <div class="post-list--post--continue">
-          <a href="{{ .RelPermalink }}">Continue&#8230;</a>
+          <a href="{{ .RelPermalink }}">
+            Continue
+            <svg fill="#333" height="16" viewBox="0 0 24 24" width="16" xmlns="http://www.w3.org/2000/svg">
+              <path d="M0 0h24v24H0z" fill="none"/>
+              <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
+            </svg>  
+          </a>
         </div>
         {{ end }}
         <div class="date secondary"> {{ .Date.Format "Jan 2, 2006" }} </div>
@@ -48,10 +54,22 @@
 
 <section class="block subnav center">
   {{ if .Paginator.HasPrev }}     
-    <a class="old" href="{{ .Paginator.Prev.URL }}">newer posts</a>
+    <a class="old" href="{{ .Paginator.Prev.URL }}">
+      <svg fill="#333" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+        <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
+        <path d="M0 0h24v24H0z" fill="none"/>
+      </svg>                                                
+      newer posts
+    </a>
   {{ end }}
 
   {{ if .Paginator.HasNext }}     
-    <a class="new" href="{{ .Paginator.Next.URL }}">older posts</a>
+    <a class="new" href="{{ .Paginator.Next.URL }}">
+      older posts
+      <svg fill="#333" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+        <path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/>
+        <path d="M0 0h24v24H0z" fill="none"/>
+      </svg>
+    </a>
   {{ end }}
 </section>
