--- a/themes/metrumy/layouts/partials/postList.html
+++ b/themes/metrumy/layouts/partials/postList.html
@@ -20,7 +20,9 @@
           <div class="wrapper--media-background">
             <div class="wrapper--media"> 
               <div class="video">
-                <iframe src="{{ . }}" frameborder="0" allowfullscreen></iframe>
+                <iframe
+                  src="{{ . }}" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen>
+                </iframe>
               </div>
             </div>
           </div>
