--- a/themes/metrumy/sass/_topbar.scss
+++ b/themes/metrumy/sass/_topbar.scss
@@ -2,7 +2,7 @@
   @include wrapper-big;  
   font-size: scale1(9);
   margin: 0 auto;
-  padding: 1rem;
+  padding: 1em 1em 0.75em;
   text-align: left;
   
   @media (max-width: $screen-sml) {
@@ -15,6 +15,7 @@
 
 .topbar--unit {
   color: $background-color;
+  display: inline-block;
   font-size: scale1(9);
   font-weight: normal;
   line-height: 1.5;
@@ -22,8 +23,8 @@
   margin: 0 auto 0.5em;
   text-transform: uppercase;
 
-  &:last-of-type {
-    margin-bottom: 0;
+  &:first-of-type {
+    margin-right: 1em;
   }
 
   @media (max-width: $screen-sml) {
