redesign syntax highlightes css

--- a/themes/metrumy/sass/_variables.scss
+++ b/themes/metrumy/sass/_variables.scss
@@ -28,10 +28,11 @@ $yellow:              #ffee66;
 $yellow-light:        #ffeedd;
 $background-yellow:   #ffee99;
 $orange:              #ff6622;
+$orange-brown:        #cc5500;
 $orange-light:        #ccbb66;
 $orange-deep:         #dd4433;
 $night:               #222233;
-$sand:                #ccaa99;
+$sand:                #887755;
 
 // sceen sizes
 $screen-big:            1024px;
