add 'spaceman' animated graphic

--- a/themes/metrumy/layouts/_default/landing.html
+++ b/themes/metrumy/layouts/_default/landing.html
@@ -18,6 +18,8 @@
 
 </nav>
 
+{{ partial "topanimation.html" . }}
+
 <div class="work--masthead">
   <div class="work--masthead--content">
   <h1 class="work--title">
