--- a/themes/metrumy/sass/_base.scss
+++ b/themes/metrumy/sass/_base.scss
@@ -241,7 +241,11 @@ a.nav--logo:hover #svg-logo--path {
 
 .top-animation {
   text-align: center;
-  margin: 0 auto;
+  margin: auto;
+  @media (max-width: $screen-sml) {
+    margin: 1em auto;
+  }
+
 }
 
 #spaceman {
@@ -251,53 +255,27 @@ a.nav--logo:hover #svg-logo--path {
   animation-iteration-count: 5;
   animation-timing-function: cubic-bezier(0.5, 0.2, 0.5, 1);
   text-align: center;
-  margin: 0 auto;
 }
 
-#sc1 {
-  animation-duration: 0.6s;
-  animation-name: bubble-blink;
-  animation-iteration-count: 9;
-  animation-timing-function: ease-in-out;
-}
-
-#sc2 {
-  animation-duration: 0.7s;
-  animation-name: bubble-blink;
-  animation-iteration-count: 7;
-  animation-timing-function: ease-in-out;
-}
-
-#sc3 {
+#flame1 {
+  position: relative;
   animation-duration: 0.9s;
-  animation-name: bubble-blink;
-  animation-iteration-count: 6;
-  animation-timing-function: ease-in-out;
-}
-
-#sc4 {
-  animation-duration: 0.8s;
-  animation-name: bubble-blink;
+  animation-name: flame;
   animation-iteration-count: 7;
   animation-timing-function: ease-in-out;
 }
 
-#sc5 {
-  animation-duration: 0.6s;
-  animation-name: bubble-blink;
-  animation-iteration-count: 10;
-  animation-timing-function: ease-in-out;
+#flame2 {
 }
-
 
 @keyframes float {
   50% {
-    transform: translateY(5px);
+    transform: translateY(-5px);
   }
 }
 
-@keyframes bubble-blink {
+@keyframes flame {
   50% {
-    opacity: 0;
+    opacity: 0.3;
   }
 }
