--- a/themes/metrumy/layouts/index.html
+++ b/themes/metrumy/layouts/index.html
@@ -2,16 +2,24 @@
 
 <nav id="nav" class="topbar">
 
-    <div class="topbar--unit">
-        <a class="topbar--link topbar--link-current" href="{{ .Site.BaseURL }}">
-            Blog
-        </a>
+    <div class="topbar--unit--logo">
+        <a class="topbar--link" href="{{ .Site.BaseURL }}">
+            {{ partial "logo.html" . }}
+        </a>    
     </div>
 
-    <div class="topbar--unit">
-        <a class="topbar--link" href="{{ .Site.BaseURL }}/howiwork/">
-            How I Work / About + Contact
-        </a>
+    <div class="nav-menu"></div>
+        <div class="topbar--unit">
+            <a class="topbar--link topbar--link-current" href="{{ .Site.BaseURL }}">
+                Blog
+            </a>
+        </div>
+
+        <div class="topbar--unit">
+            <a class="topbar--link" href="{{ .Site.BaseURL }}/howiwork/">
+                How I Work / About + Contact
+            </a>
+        </div>
     </div>
 
 </nav>
