--- a/themes/metrumy/sass/_variables.scss
+++ b/themes/metrumy/sass/_variables.scss
@@ -1,6 +1,6 @@
-$base-font-family:      "Source Sans Pro", sans-serif;
+$base-font-family:      "Merriweather", serif;
 $monospace:             monospace;
-$base-line-height:      1.5;
+$base-line-height:      1.7;
 
 // colors
 $text-color:          #383838;
