edit text, fix typos

--- a/themes/metrumy/layouts/_default/landing.html
+++ b/themes/metrumy/layouts/_default/landing.html
@@ -75,7 +75,7 @@
 
       <p class="">
       People say “a picture is like a thousand words”, but very often it's a very vague way of presenting information. 
-      When you need to be precise, well design phrases and clean text are the key. That's why I like typography.
+      When you need to be precise, well designed phrases and clean text are the key. That's why I like typography.
       </p>
 
     </section>
@@ -95,7 +95,7 @@
 </div>
 
 <div class="work--myname">
-  <p>My name is Bartosz Wieczorek and I'm not a hipster.
+  <p>My name is Bartosz Wieczorek.
   <br><span class="secondary">(pronunciation: Bartosh Vietchorek)</span>
   </p>
 </div>
