--- a/themes/metrumy/layouts/_default/landingPage.html
+++ b/themes/metrumy/layouts/_default/landingPage.html
@@ -2,31 +2,29 @@
 
 <div class="work">
 
-    <nav id="nav" class="topbar">
+<nav id="nav" class="topbar">
 
-        <div class="topbar--unit--logo">
-            <a class="topbar--link" href="{{ .Site.BaseURL }}">
-                {{ partial "logo.html" . }}
-            </a>    
-        </div>
-    
-        <div class="nav-menu"></div>
-            <div class="topbar--unit">
-                <a class="topbar--link" href="{{ .Site.BaseURL }}">
-                    Blog
-                </a>
-            </div>
-    
-            <div class="topbar--unit">
-                <a class="topbar--link topbar--link-current" href="{{ .Site.BaseURL }}/howiwork/">
-                    How I Work / About + Contact
-                </a>
-            </div>
-        </div>
-    
-    </nav>
+  <div class="topbar--unit--logo">
+    <a class="topbar--link" href="{{ .Site.BaseURL }}">
+      {{ partial "logo.html" . }}
+    </a>    
+  </div>
 
-{{ partial "topanimation.html" . }}
+  <div class="nav-menu">
+    <div class="topbar--unit">
+        <a class="topbar--link" href="{{ .Site.BaseURL }}">
+          Blog
+        </a>
+    </div>
+
+    <div class="topbar--unit">
+        <a class="topbar--link topbar--link-current" href="{{ .Site.BaseURL }}/howiwork/">
+          About/Contact
+        </a>
+    </div>
+  </div>
+
+</nav>
 
 <div class="work--masthead">
   <div class="work--masthead--content">
@@ -66,8 +64,6 @@
       </p>
 
     </section>
-
-
 
     <section class="work--miniarticle">
 
