--- a/themes/metrumy/layouts/index.html
+++ b/themes/metrumy/layouts/index.html
@@ -11,13 +11,13 @@
     <div class="nav-menu"></div>
         <div class="topbar--unit">
             <a class="topbar--link topbar--link-current" href="{{ .Site.BaseURL }}">
-                Blog
+                About/Contact
             </a>
         </div>
 
         <div class="topbar--unit">
-            <a class="topbar--link" href="{{ .Site.BaseURL }}/howiwork/">
-                How I Work / About + Contact
+            <a class="topbar--link" href="{{ .Site.BaseURL }}/blog/">
+                Blog
             </a>
         </div>
     </div>
@@ -25,5 +25,5 @@
 </nav>
 
 
-{{ partial "postList.html" . }}
+{{ partial "landing.html" . }}
 {{ partial "footer.html" . }}
