--- a/themes/metrumy/layouts/partials/topbar.html
+++ b/themes/metrumy/layouts/partials/topbar.html
@@ -9,13 +9,13 @@
     <div class="nav-menu"></div>
         <div class="topbar--unit">
             <a class="topbar--link" href="{{ .Site.BaseURL }}">
-                Blog
+                About/Contact
             </a>
         </div>
 
         <div class="topbar--unit">
-            <a class="topbar--link" href="{{ .Site.BaseURL }}/howiwork/">
-                How I Work / About + Contact
+            <a class="topbar--link" href="{{ .Site.BaseURL }}/blog/">
+                Blog
             </a>
         </div>
     </div>
