--- a/themes/metrumy/sass/_mixins-functions.scss
+++ b/themes/metrumy/sass/_mixins-functions.scss
@@ -74,11 +74,12 @@
 }
 
 @mixin monoblock {
-  font-size: 0.9em;
+  font-size: 15px;
   font-family: $monospace;
+  line-height: 1.5;
   
   @media screen and (max-width: $screen-sml) {
-    font-size: 0.8em;
+    font-size: 13px;
   }
 }
 
