--- a/themes/metrumy/sass/_base.scss
+++ b/themes/metrumy/sass/_base.scss
@@ -28,10 +28,12 @@ body {
 }
 
 a {
+  background-color: transparent;
   color: $text-color;
   text-decoration: none;
   border-bottom: 1px solid $grey;
-  transition: border 0.1s ease-in;
+  border-radius: 4px 4px 0 0;
+  transition: background-color 0.1s ease-in;
 
   &:active, &:hover {
     background-color: $lime;
