--- a/themes/metrumy/layouts/partials/head.html
+++ b/themes/metrumy/layouts/partials/head.html
@@ -19,10 +19,10 @@
   <link href="https://fonts.googleapis.com/css?family=Merriweather:400,400i,700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="/dist/bundle.css">
 
-  <link rel="icon" type="image/png" href="{{ .Site.BaseURL }}/icon152.png?v=2" sizes="152x152">
-  <link rel="icon" type="image/png" href="{{ .Site.BaseURL }}/icon320.png?v=2" sizes="320x320">
-  <link rel="icon" type="image/png" href="{{ .Site.BaseURL }}/icon512.png?v=2" sizes="512v512">
-  <link rel="apple-touch-icon" href="{{ .Site.BaseURL }}/icon320.png?v=2">
+  <link rel="icon" type="image/png" href="/icon152.png?v=2" sizes="152x152">
+  <link rel="icon" type="image/png" href="/icon320.png?v=2" sizes="320x320">
+  <link rel="icon" type="image/png" href="/icon512.png?v=2" sizes="512v512">
+  <link rel="apple-touch-icon" href="/icon320.png?v=2">
 
   <link rel="manifest" href="/manifest.json">
 
