--- a/themes/metrumy/layouts/_default/landingPage.html
+++ b/themes/metrumy/layouts/_default/landingPage.html
@@ -5,20 +5,20 @@
 <nav id="nav" class="topbar">
 
   <div class="topbar--unit--logo">
-    <a class="topbar--link" href="{{ .Site.BaseURL }}">
+    <a class="topbar--link" href="/">
       {{ partial "logo.html" . }}
     </a>    
   </div>
 
   <div class="nav-menu">
     <div class="topbar--unit">
-        <a class="topbar--link" href="{{ .Site.BaseURL }}">
+        <a class="topbar--link" href="/blog">
           Blog
         </a>
     </div>
 
     <div class="topbar--unit">
-        <a class="topbar--link topbar--link-current" href="{{ .Site.BaseURL }}/howiwork/">
+        <a class="topbar--link topbar--link-current" href="/">
           About/Contact
         </a>
     </div>
