fix brooken links

--- a/themes/metrumy/layouts/index.html
+++ b/themes/metrumy/layouts/index.html
@@ -3,20 +3,20 @@
 <nav id="nav" class="topbar">
 
     <div class="topbar--unit--logo">
-        <a class="topbar--link" href="{{ .Site.BaseURL }}">
+        <a class="topbar--link" href="/">
             {{ partial "logo.html" . }}
         </a>    
     </div>
 
     <div class="nav-menu"></div>
         <div class="topbar--unit">
-            <a class="topbar--link topbar--link-current" href="{{ .Site.BaseURL }}">
+            <a class="topbar--link topbar--link-current" href="/">
                 About/Contact
             </a>
         </div>
 
         <div class="topbar--unit">
-            <a class="topbar--link" href="{{ .Site.BaseURL }}/blog/">
+            <a class="topbar--link" href="/blog">
                 Blog
             </a>
         </div>
