--- a/themes/metrumy/layouts/_default/landintTest.html
+++ b/themes/metrumy/layouts/_default/landintTest.html
@@ -5,13 +5,13 @@
 <nav id="nav" class="topbar">
     
   <div class="topbar--unit">
-      <a class="topbar--link" href="{{ .Site.BaseURL }}">
+      <a class="topbar--link" href="/">
           Blog
       </a>
   </div>
 
   <div class="topbar--unit">
-      <a class="topbar--link topbar--link-current" href="{{ .Site.BaseURL }}/howiwork/">
+      <a class="topbar--link topbar--link-current" href="/howiwork">
           How I Work / About + Contact
       </a>
   </div>
