new webpack config and switch to npm from yarn

--- a/themes/metrumy/sass/_topbar.scss
+++ b/themes/metrumy/sass/_topbar.scss
@@ -23,7 +23,6 @@
   line-height: 1.5;
   letter-spacing: 0.075em;
   margin: 0 0 0.5em 1em;
-  text-transform: uppercase;
 
   &:first-of-type {
     margin-right: 1em;
@@ -40,5 +39,5 @@
 }
 
 .topbar--link-current {
-  background-color: $lime;
+  color: $orange;
 }
