--- a/themes/metrumy/sass/_base.scss
+++ b/themes/metrumy/sass/_base.scss
@@ -28,7 +28,6 @@ body {
 }
 
 a {
-  background-color: transparent;
   color: $text-color;
   text-decoration: none;
   border-bottom: 1px solid $grey;
@@ -36,7 +35,7 @@ a {
   transition: background-color 0.1s ease-in;
 
   &:active, &:hover {
-    background-color: $lime;
+    color: $orange;
   }
 
   @media print {
