--- a/themes/metrumy/sass/_work.scss
+++ b/themes/metrumy/sass/_work.scss
@@ -5,8 +5,8 @@
 .work--masthead--content {
   font-size: 1rem;
   max-width: 820px;
-  margin-top: 0;
-  margin-bottom: scale1(15);
+  margin-top: scale1(15);
+  margin-bottom: scale1(16);
   padding: 0 1rem;
 
   @media (max-width: $screen-sml) {
@@ -39,7 +39,6 @@
 }
 
 .work--body {
-  font-size: 1rem;
   @include wrapper-big;
   @include grid-50-50;
   padding: 0 1rem;
