setup eslint and format .js files accordingly

--- a/themes/metrumy/sass/_variables.scss
+++ b/themes/metrumy/sass/_variables.scss
@@ -4,7 +4,7 @@ $base-line-height:      1.7;
 
 // colors
 $text-color:          #383838;
-$background-color:    #fffefd;
+$background-color:    #faf7f5;
 $black:               #222;
 $white:               #fff;
 $red:                 #ee1144;
